lib/nanosvg.h

// NanoSVG is a simple stupid single-header-file SVG parse. The output of the parser is a list of cubic bezier shapes.
//
// The library suits well for anything from rendering scalable icons in your editor application to prototyping a game.
//
// NanoSVG supports a wide range of SVG features, but something may be missing, feel free to create a pull request!
//
// The shapes in the SVG images are transformed by the viewBox and converted to specified units.
// That is, you should get the same looking data as your designed in your favorite app.
//
// NanoSVG can return the paths in few different units. For example if you want to render an image, you may choose
// to get the paths in pixels, or if you are feeding the data into a CNC-cutter, you may want to use millimeters.
//
// The units passed to NanoVG should be one of: 'px', 'pt', 'pc' 'mm', 'cm', or 'in'.
// DPI (dots-per-inch) controls how the unit conversion is done.
//
// If you don't know or care about the units stuff, "px" and 96 should get you going.


/* Example Usage:
  // Load
  SNVGImage* image;
  image = nsvgParseFromFile("test.svg", "px", 96);
  printf("size: %f x %f\n", image->width, image->height);
  // Use...
  for (shape = image->shapes; shape != NULL; shape = shape->next) {
    for (path = shape->paths; path != NULL; path = path->next) {
      for (i = 0; i < path->npts-1; i += 3) {
        float* p = &path->pts[i*2];
        drawCubicBez(p[0],p[1], p[2],p[3], p[4],p[5], p[6],p[7]);
      }
    }
  }
  // Delete
  nsvgDelete(image);
*/

#define NSVG_PAINT_NONE 0
#define NSVG_PAINT_COLOR 1
#define NSVG_PAINT_LINEAR_GRADIENT 2
#define NSVG_PAINT_RADIAL_GRADIENT 3
#define NSVG_SPREAD_PAD 0
#define NSVG_SPREAD_REFLECT 1
#define NSVG_SPREAD_REPEAT 2
typedef struct NSVGgradientStop {
  unsigned int color;
  float offset;
} NSVGgradientStop;
typedef struct NSVGgradient {
  float xform[6];
  char spread;
  float fx, fy;
  int nstops;
  NSVGgradientStop stops[1];
} NSVGgradient;
typedef struct NSVGpaint {
  char type;
  union {
    unsigned int color;
    NSVGgradient* gradient;
  };
} NSVGpaint;
typedef struct NSVGpath
{
  float* pts;         // Cubic bezier points: x0,y0, [cpx1,cpx1,cpx2,cpy2,x1,y1], ...
  int npts;         // Total number of bezier points.
  char closed;        // Flag indicating if shapes should be treated as closed.
  float bounds[4];      // Tight bounding box of the shape [minx,miny,maxx,maxy].
  struct NSVGpath* next;    // Pointer to next path, or NULL if last element.
} NSVGpath;
typedef struct NSVGshape
{
  NSVGpaint fill;       // Fill paint
  NSVGpaint stroke;     // Stroke paint
  float opacity;        // Opacity of the shape.
  float strokeWidth;      // Stroke width (scaled)
  float bounds[4];      // Tight bounding box of the shape [minx,miny,maxx,maxy].
  NSVGpath* paths;      // Linked list of paths in the image.
  struct NSVGshape* next;   // Pointer to next shape, or NULL if last element.
} NSVGshape;
typedef struct NSVGimage
{
  float width;        // Width of the image.
  float height;       // Height of the image.
  NSVGshape* shapes;      // Linked list of shapes in the image.
} NSVGimage;